--- a/public/blogs/anatomy-of-git-dir/index.html
+++ b/public/blogs/anatomy-of-git-dir/index.html
@@ -31,7 +31,8 @@
 <meta property="og:url" content="//localhost:1313/blogs/anatomy-of-git-dir/">
   <meta property="og:site_name" content="Portfolio">
   <meta property="og:title" content="Anatomy of .git/ directory">
-  <meta property="og:description" content=".git/COMMIT_EDITMSG A temporary git commit file that holds the commit message of last commit.
+  <meta property="og:description" content="Git stores all its data in the .git/ directory inside the root of the Project.
+.git/COMMIT_EDITMSG A temporary git commit file that holds the commit message of last commit.
 If we use git commit command (without the m flag), it will store what we see in our editor while commiting any changes. If it’s not (using git commit -m &#34;commit message&#34;), it will store only the commit message. This file never leaves the local machine &amp; remote doesn’t know this file .git/config #git_core_files Text based local/project specific configuration file in the root of .git directory.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -42,7 +43,8 @@ If we use git commit command (without the m flag), it will store what we see in 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Anatomy of .git/ directory">
-  <meta name="twitter:description" content=".git/COMMIT_EDITMSG A temporary git commit file that holds the commit message of last commit.
+  <meta name="twitter:description" content="Git stores all its data in the .git/ directory inside the root of the Project.
+.git/COMMIT_EDITMSG A temporary git commit file that holds the commit message of last commit.
 If we use git commit command (without the m flag), it will store what we see in our editor while commiting any changes. If it’s not (using git commit -m &#34;commit message&#34;), it will store only the commit message. This file never leaves the local machine &amp; remote doesn’t know this file .git/config #git_core_files Text based local/project specific configuration file in the root of .git directory.">
 
 
@@ -319,7 +321,8 @@ Anatomy of .git/ directory | Portfolio
           </div>
           
           <article class="page-content  p-2">
-          <h2 id="gitcommit_editmsg"><code>.git/COMMIT_EDITMSG</code></h2>
+          <p>Git stores all its data in the <code>.git/</code> directory inside the root of the Project.</p>
+<h2 id="gitcommit_editmsg"><code>.git/COMMIT_EDITMSG</code></h2>
 <p>A temporary git commit file that holds the commit message of last commit.</p>
 <ul>
 <li>If we use <code>git commit</code> command  (without the <code>m</code> flag), it will store what we see in our editor while commiting any changes.  If it&rsquo;s not (using <code>git commit -m &quot;commit message&quot;</code>),  it will store only the commit message.</li>
