--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -304,19 +304,19 @@ Blogs | Portfolio
                         </a>
                         <div class="card-text secondary-font">
                             <p><h2 id="permissions--read-write-execute">Permissions : Read, Write, Execute</h2>
-<h3 id="r-read-permission"><code>r</code> (Read) Permission:</h3>
+<h3 id="read-permission-r">(Read) Permission (<code>r</code>):</h3>
 <p>with <code>r</code> permission user can:</p>
 <ul>
 <li>View the content of a file</li>
 <li>List the contents of a directory</li>
 </ul>
-<h3 id="w-write-permission"><code>w</code> (Write) Permission:</h3>
+<h3 id="write-permission-w">Write Permission (<code>w</code>):</h3>
 <p>with <code>w</code> permission user can:</p>
 <ul>
 <li>Modify a file</li>
 <li>Create, rename, delete file or dir within a directory</li>
 </ul>
-<h3 id="x-execute-permission"><code>x</code> (Execute) permission:</h3>
+<h3 id="execute-permission-x">Execute permission (<code>x</code>):</h3>
 <p>with <code>x …</code></p></p>
                         </div>
                     </div>
@@ -343,10 +343,11 @@ Blogs | Portfolio
                             <h5 class="card-title bg-transparent" title="Anatomy of .git/ directory">Anatomy of .git/ …</h5>
                         </a>
                         <div class="card-text secondary-font">
-                            <p><h2 id="gitcommit_editmsg"><code>.git/COMMIT_EDITMSG</code></h2>
+                            <p><p>Git stores all its data in the <code>.git/</code> directory inside the root of the Project.</p>
+<h2 id="gitcommit_editmsg"><code>.git/COMMIT_EDITMSG</code></h2>
 <p>A temporary git commit file that holds the commit message of last commit.</p>
 <ul>
-<li>If we use <code>git commit</code> command  (without the <code>m</code> flag), it will store what we see in our editor while commiting any changes.  If it&rsquo;s not (using <code>git commit -m &quot;commit message&quot;</code>),  it will store …</li></ul></p>
+<li>If we use <code>git commit</code> command  (without the <code>m</code> flag), it will store what we see in our editor while commiting any changes.  If …</li></ul></p>
                         </div>
                     </div>
                     <div class="mt-auto post-footer bg-transparent py-3">
