--- a/public/blogs/linux-file-permissions/index.html
+++ b/public/blogs/linux-file-permissions/index.html
@@ -31,9 +31,9 @@
 <meta property="og:url" content="//localhost:1313/blogs/linux-file-permissions/">
   <meta property="og:site_name" content="Portfolio">
   <meta property="og:title" content="Linux File Permissions">
-  <meta property="og:description" content="Permissions : Read, Write, Execute r (Read) Permission: with r permission user can:
-View the content of a file List the contents of a directory w (Write) Permission: with w permission user can:
-Modify a file Create, rename, delete file or dir within a directory x (Execute) permission: with x permission user can :
+  <meta property="og:description" content="Permissions : Read, Write, Execute (Read) Permission (r): with r permission user can:
+View the content of a file List the contents of a directory Write Permission (w): with w permission user can:
+Modify a file Create, rename, delete file or dir within a directory Execute permission (x): with x permission user can :
 Execute a file as script Can enter in a directory Permission Category : User, Group, Others u for User The files owner">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -47,9 +47,9 @@ Execute a file as script Can enter in a directory Permission Category : User, Gr
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Linux File Permissions">
-  <meta name="twitter:description" content="Permissions : Read, Write, Execute r (Read) Permission: with r permission user can:
-View the content of a file List the contents of a directory w (Write) Permission: with w permission user can:
-Modify a file Create, rename, delete file or dir within a directory x (Execute) permission: with x permission user can :
+  <meta name="twitter:description" content="Permissions : Read, Write, Execute (Read) Permission (r): with r permission user can:
+View the content of a file List the contents of a directory Write Permission (w): with w permission user can:
+Modify a file Create, rename, delete file or dir within a directory Execute permission (x): with x permission user can :
 Execute a file as script Can enter in a directory Permission Category : User, Group, Others u for User The files owner">
 
 
@@ -324,19 +324,19 @@ Linux File Permissions | Portfolio
           
           <article class="page-content  p-2">
           <h2 id="permissions--read-write-execute">Permissions : Read, Write, Execute</h2>
-<h3 id="r-read-permission"><code>r</code> (Read) Permission:</h3>
+<h3 id="read-permission-r">(Read) Permission (<code>r</code>):</h3>
 <p>with <code>r</code> permission user can:</p>
 <ul>
 <li>View the content of a file</li>
 <li>List the contents of a directory</li>
 </ul>
-<h3 id="w-write-permission"><code>w</code> (Write) Permission:</h3>
+<h3 id="write-permission-w">Write Permission (<code>w</code>):</h3>
 <p>with <code>w</code> permission user can:</p>
 <ul>
 <li>Modify a file</li>
 <li>Create, rename, delete file or dir within a directory</li>
 </ul>
-<h3 id="x-execute-permission"><code>x</code> (Execute) permission:</h3>
+<h3 id="execute-permission-x">Execute permission (<code>x</code>):</h3>
 <p>with <code>x</code> permission user can :</p>
 <ul>
 <li>Execute a file as script</li>
@@ -496,9 +496,9 @@ _By default:</li>
   <ul>
     <li><a href="#permissions--read-write-execute">Permissions : Read, Write, Execute</a>
       <ul>
-        <li><a href="#r-read-permission"><code>r</code> (Read) Permission:</a></li>
-        <li><a href="#w-write-permission"><code>w</code> (Write) Permission:</a></li>
-        <li><a href="#x-execute-permission"><code>x</code> (Execute) permission:</a></li>
+        <li><a href="#read-permission-r">(Read) Permission (<code>r</code>):</a></li>
+        <li><a href="#write-permission-w">Write Permission (<code>w</code>):</a></li>
+        <li><a href="#execute-permission-x">Execute permission (<code>x</code>):</a></li>
       </ul>
     </li>
     <li><a href="#permission-category--user-group-others">Permission Category : User, Group, Others</a>
