added the blog yaml

--- a/public/blogs/markdown/index.html
+++ b/public/blogs/markdown/index.html
@@ -319,7 +319,7 @@ Markdown Syntax | Portfolio
           
           <article class="page-content  p-2">
           <h1 id="markdown-tutorial">Markdown Tutorial</h1>
-<p>Markdown is a lightweight markup language that you can use to add formatting elements to plaintext text documents. Created by John Gruber in 2004, Markdown is now one of the world’s most popular markup languages. It is widely used for formatting readme files, writing messages in online discussion forums, and creating rich text using a plain text editor.</p>
+<p>Markdown is a lightweight markup language that you can use to add formatting elements to plaintext text documents. Created by <strong>John Gruber</strong> in 2004, Markdown is now one of the world’s most popular markup languages. It is widely used for formatting readme files, writing messages in online discussion forums, and creating rich text using a plain text editor.</p>
 <p>This tutorial will cover everything you need to know about Markdown, from basic syntax to advanced features. Let&rsquo;s dive in!</p>
 <hr>
 <h2 id="basic-syntax">Basic Syntax</h2>
