added image to yaml blog

--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -292,6 +292,12 @@ Blogs | Portfolio
             <div class="card-columns">
                 <div class="card h-100">
                     
+                    <div class="card-header">
+                        <a href="/blogs/yaml-syntax/">
+                            <img src="/blogs/yaml.png" class="card-img-top" alt="YAML, The Lingua Franca of IT Infrastructure">
+                        </a>
+                    </div>
+                    
                     <div class="card-body bg-transparent p-4 shadow-sm">
                         <a href="/blogs/yaml-syntax/" class="primary-font card-title">
                             <h5 class="card-title bg-transparent" title="YAML, The Lingua Franca of IT Infrastructure">YAML, The Lingua Franca …</h5>
