--- a/public/blogs/yaml-syntax/index.html
+++ b/public/blogs/yaml-syntax/index.html
@@ -317,6 +317,10 @@ YAML, The Lingua Franca of IT Infrastructure | Portfolio
             </div>
           </div>
           
+          <div class="featured-image">
+            <img class="img-fluid mx-auto d-block" src="/blogs/yaml.png" alt="YAML, The Lingua Franca of IT Infrastructure">
+          </div>
+          
           <article class="page-content  p-2">
           <h1 id="yaml">YAML</h1>
 <p>YAML (YAML Ain&rsquo;t Markup Language) is a human-friendly data serialization format commonly used for configuration files, data exchange, and templating.</p>
